# worldsense

./: .env.example  .gitignore  LICENSE  README.EN.md  README.md  SKILL.md  pyproject.toml  start.sh  stop.sh
data/: country_profiles.json  hofstede.json  occupations.json  occupations.json.bak  populations.json  title_translations.json  work_contexts.json
docs/: ARCHITECTURE.md  NOTES.md  custom-type-llm-slot-design.md
scripts/: epsilon_ab_experiment.py  epsilon_ab_result.json  fix_occupations.py  generate_work_context.py  import_bls.py
tests/: test_persona.py  test_pipeline.py
worldsense/: __init__.py  cli.py
worldsense/api/: __init__.py  app.py
worldsense/core/: __init__.py  engine.py  result.py  settings.py  task.py
worldsense/llm/: __init__.py  anthropic_compat.py  backend.py  openai_compat.py  rate_limiter.py  vision_probe.py
worldsense/persona/: __init__.py  cognitive.py  enricher.py  epsilon.py  generator.py  schema.py
worldsense/pipeline/: __init__.py  output.py  scheduler.py  worker.py
worldsense/report/: __init__.py  aggregator.py
worldsense/static/: app.js  index.html  style.css
